--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.6.4",
         "dflydev/apache-mime-types": "^1.0",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "michelf/php-markdown": "^1.7",
+        "michelf/php-smartypants": "dev-lib"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
