--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "michelf/php-markdown": "^1.7",
-        "michelf/php-smartypants": "dev-lib"
+        "michelf/php-smartypants": "dev-lib",
+        "suin/php-rss-writer": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
